--- a/test/solr/conf/velocity/browse.vm
+++ b/test/solr/conf/velocity/browse.vm
@@ -4,9 +4,7 @@
 #set($mltResults = $response.response.get("moreLikeThis"))
 #set($annotate = $params.get("annotateBrowse"))
 #parse('query.vm')
-#if($response.response.spellcheck.suggestions and $response.response.spellcheck.suggestions.size() > 0)
-  Did you mean <a href="#url_for_home?q=$esc.url($response.response.spellcheck.suggestions.collation)#if($list.size($request.params.getParams('fq')) > 0)&#fqs($request.params.getParams('fq'))#end#debug">$response.response.spellcheck.suggestions.collation</a>?
-#end
+#parse('did_you_mean.vm')
 
 <div class="navigators">
   #parse("facets.vm")
@@ -18,6 +16,13 @@
   #else<span><span class="results-found">$page.results_found</span> results found in ${response.responseHeader.QTime} ms</span>
   Page <span class="page-num">$page.current_page_number</span> of <span
         class="page-count">$page.page_count</span>#end
+</div>
+
+<div class="error">
+  #if(${response.response.error.code})
+    <h1>ERROR ${response.response.error.code}</h1>
+    ${response.response.error.msg}
+  #end
 </div>
 
 <div class="results">
